[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/rooms/generateArena/GenerateArena.gd" type="Script" id=1]
[ext_resource path="res://scenes/rooms/components/camera/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Vanadine Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[node name="GenerateArena" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Camera" parent="CanvasLayer" instance=ExtResource( 2 )]
position = Vector2( 160, 120 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 320.0
margin_bottom = 240.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblProgress" type="Label" parent="CanvasLayer"]
margin_left = 18.0
margin_top = 110.0
margin_right = 304.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 1 )
text = "Now loading shits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGenerating" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StartGenerating" to="." method="_on_StartGenerating_timeout"]
